tests/good/test5.src
.IPPcode18
labeL $a
label -a
label _a
label *a
label %a
label &a
label aksdjf