tests/error/redefine_label.src
.IPPcode18
label a
label a